weather app ended, some keras continue

--- a/keras_training/3 reuters labels.ipynb
+++ b/keras_training/3 reuters labels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,9 +94,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fishmeal: 1\n",
+      "tapioca: 1\n",
+      "rand: 1\n",
+      "saudriyal: 1\n",
+      "nzdlr: 1\n",
+      "wool: 1\n",
+      "austdlr: 1\n",
+      "soy-meal: 1\n",
+      "barley: 1\n",
+      "cruzado: 1\n",
+      "hk: 1\n",
+      "naphtha: 1\n",
+      "l-cattle: 2\n",
+      "coconut: 2\n",
+      "rapeseed: 2\n",
+      "plywood: 2\n",
+      "f-cattle: 2\n",
+      "propane: 3\n",
+      "rice: 3\n",
+      "inventories: 3\n",
+      "palm-oil: 3\n",
+      "groundnut: 3\n",
+      "cpu: 4\n",
+      "jet: 4\n",
+      "platinum: 4\n",
+      "soybean: 5\n",
+      "potato: 5\n",
+      "nickel: 5\n",
+      "stg: 5\n",
+      "yen: 6\n",
+      "instal-debt: 7\n",
+      "tea: 9\n",
+      "corn: 9\n",
+      "lumber: 13\n",
+      "fuel: 13\n",
+      "income: 13\n",
+      "heat: 16\n",
+      "lei: 16\n",
+      "silver: 16\n",
+      "hog: 17\n",
+      "housing: 19\n",
+      "strategic-metal: 19\n",
+      "lead: 19\n",
+      "zinc: 21\n",
+      "wheat: 22\n",
+      "meal-feed: 22\n",
+      "orange: 22\n",
+      "retail: 23\n",
+      "wpi: 27\n",
+      "cotton: 28\n",
+      "carcass: 29\n",
+      "pet-chem: 29\n",
+      "tin: 32\n",
+      "gas: 38\n",
+      "rubber: 42\n",
+      "dlr: 46\n",
+      "nat-gas: 51\n",
+      "iron-steel: 52\n",
+      "alum: 53\n",
+      "ipi: 57\n",
+      "jobs: 57\n",
+      "livestock: 58\n",
+      "bop: 60\n",
+      "copper: 62\n",
+      "reserves: 62\n",
+      "cocoa: 67\n",
+      "oilseed: 81\n",
+      "cpi: 86\n",
+      "veg-oil: 94\n",
+      "gold: 123\n",
+      "coffee: 126\n",
+      "gnp: 127\n",
+      "sugar: 154\n",
+      "money-supply: 177\n",
+      "ship: 209\n",
+      "interest: 339\n",
+      "trade: 473\n",
+      "grain: 537\n",
+      "crude: 543\n",
+      "money-fx: 682\n",
+      "acq: 2423\n",
+      "earn: 3972\n",
+      "-\n",
+      "Kept topics: 46\n",
+      "Kept wires: 11228\n",
+      "-\n",
+      "Topic mapping: [('cocoa', 0), ('grain', 1), ('veg-oil', 2), ('earn', 3), ('acq', 4), ('wheat', 5), ('copper', 6), ('housing', 7), ('money-supply', 8), ('coffee', 9), ('sugar', 10), ('trade', 11), ('reserves', 12), ('ship', 13), ('cotton', 14), ('carcass', 15), ('crude', 16), ('nat-gas', 17), ('cpi', 18), ('money-fx', 19), ('interest', 20), ('gnp', 21), ('meal-feed', 22), ('alum', 23), ('oilseed', 24), ('gold', 25), ('tin', 26), ('strategic-metal', 27), ('livestock', 28), ('retail', 29), ('ipi', 30), ('iron-steel', 31), ('rubber', 32), ('heat', 33), ('jobs', 34), ('lei', 35), ('bop', 36), ('zinc', 37), ('orange', 38), ('pet-chem', 39), ('dlr', 40), ('gas', 41), ('silver', 42), ('wpi', 43), ('hog', 44), ('lead', 45)]\n",
+      "-\n",
+      "Sanity check:\n",
+      "...index of banana : 19764\n",
+      "...index of oil : 62\n",
+      "...index of chocolate : 7202\n",
+      "...index of the : 1\n",
+      "...index of dsft : None\n",
+      "text reconstruction:\n",
+      "the commodity credit corporation ccc has accepted an export bonus offer to cover the sale of 37 000 long tons of wheat flour to north yemen the u s agriculture department said the wheat four is for shipment march may and the bonus awarded was 119 05 dlrs per tonnes and will be paid in the form of commodities from the ccc inventory the bonus was awarded to the pillsbury company the wheat flour purchases complete the export enhancement program initiative announced in april 1986 it said reuter 3\n",
+      "-\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "if __name__ == \"__main__\":\n",
