added weather request and put it on the map

--- a/weather app.ipynb
+++ b/weather app.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tkinter as tk\n",
-    "import requests "
+    "import os\n",
+    "import requests \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,12 +27,13 @@
     "    params = {'APPID': token, 'q': city, 'units': 'Metric'}\n",
     "    response = requests.get(url, params=params)\n",
     "    weather = response.json()\n",
+    "    print(weather)\n",
     "    label['text'] = format_response(weather)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,9 +138,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'coord': {'lon': 27.56, 'lat': 53.9}, 'weather': [{'id': 803, 'main': 'Clouds', 'description': 'broken clouds', 'icon': '04n'}], 'base': 'stations', 'main': {'temp': 18, 'pressure': 1015, 'humidity': 88, 'temp_min': 18, 'temp_max': 18}, 'visibility': 10000, 'wind': {'speed': 2, 'deg': 50}, 'clouds': {'all': 75}, 'dt': 1564170297, 'sys': {'type': 1, 'id': 8939, 'message': 0.0072, 'country': 'BY', 'sunrise': 1564107175, 'sunset': 1564165161}, 'timezone': 10800, 'id': 625144, 'name': 'Minsk', 'cod': 200}\n"
+     ]
+    }
+   ],
    "source": [
     "#start main window loop\n",
     "root.mainloop()"
