--- a/Blackjack.ipynb
+++ b/Blackjack.ipynb
@@ -2,186 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#set matplotlib graphics shows in notebook\n",
-    "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns; sns.set() #using seaborn styles\n",
     "#standard libraries for variation type of data\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "#library for working with images\n",
-    "from PIL import Image, ImageDraw"
+    "import card_deck\n",
+    "from IPython.display import HTML"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "#names for deck cards\n",
-    "pack = pd.Series(['Ace','2','3','4','5','6','7','8','9','10','Jack','Queen','King','Joker'])\n",
-    "#names for suit\n",
-    "suit = pd.Series(['hearts','diamonds','spades','clubs'])\n",
-    "#creating matrix for deck\n",
-    "deck = pd.DataFrame(np.arange(0,14*4,1).reshape((14, 4)), columns=suit,index=pack)"
+    "deck = card_deck.card_names()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>hearts</th>\n",
-       "      <th>diamonds</th>\n",
-       "      <th>spades</th>\n",
-       "      <th>clubs</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Ace</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>8</td>\n",
-       "      <td>9</td>\n",
-       "      <td>10</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>12</td>\n",
-       "      <td>13</td>\n",
-       "      <td>14</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>16</td>\n",
-       "      <td>17</td>\n",
-       "      <td>18</td>\n",
-       "      <td>19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>20</td>\n",
-       "      <td>21</td>\n",
-       "      <td>22</td>\n",
-       "      <td>23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>24</td>\n",
-       "      <td>25</td>\n",
-       "      <td>26</td>\n",
-       "      <td>27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>28</td>\n",
-       "      <td>29</td>\n",
-       "      <td>30</td>\n",
-       "      <td>31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>32</td>\n",
-       "      <td>33</td>\n",
-       "      <td>34</td>\n",
-       "      <td>35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>36</td>\n",
-       "      <td>37</td>\n",
-       "      <td>38</td>\n",
-       "      <td>39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Jack</th>\n",
-       "      <td>40</td>\n",
-       "      <td>41</td>\n",
-       "      <td>42</td>\n",
-       "      <td>43</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Queen</th>\n",
-       "      <td>44</td>\n",
-       "      <td>45</td>\n",
-       "      <td>46</td>\n",
-       "      <td>47</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>King</th>\n",
-       "      <td>48</td>\n",
-       "      <td>49</td>\n",
-       "      <td>50</td>\n",
-       "      <td>51</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Joker</th>\n",
-       "      <td>52</td>\n",
-       "      <td>53</td>\n",
-       "      <td>54</td>\n",
-       "      <td>55</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       hearts  diamonds  spades  clubs\n",
-       "Ace         0         1       2      3\n",
-       "2           4         5       6      7\n",
-       "3           8         9      10     11\n",
-       "4          12        13      14     15\n",
-       "5          16        17      18     19\n",
-       "6          20        21      22     23\n",
-       "7          24        25      26     27\n",
-       "8          28        29      30     31\n",
-       "9          32        33      34     35\n",
-       "10         36        37      38     39\n",
-       "Jack       40        41      42     43\n",
-       "Queen      44        45      46     47\n",
-       "King       48        49      50     51\n",
-       "Joker      52        53      54     55"
+       "array([47, 44, 19,  6, 29, 15, 26, 12, 33,  8, 51,  9, 13, 38, 32, 27, 10,\n",
+       "       16, 28,  2, 30, 43,  5, 20, 36, 37, 40,  4,  1,  7, 52, 25, 21, 49,\n",
+       "       45, 41, 18, 11, 31, 39, 24, 42, 23, 35, 34, 14, 22, 48,  3, 46, 53,\n",
+       "       17, 50])"
       ]
      },
      "execution_count": 3,
@@ -190,217 +48,101 @@
     }
    ],
    "source": [
-    "#check result\n",
-    "deck"
+    "x = np.arange(1, 54)\n",
+    "np.random.shuffle(x)\n",
+    "x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "color       red\n",
+      "suit     hearts\n",
+      "card          2\n",
+      "Name: 15, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(deck.loc[x[0]])\n",
+    "y.append(x[0])\n",
+    "x = x[1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hearts      int32\n",
-      "diamonds    int32\n",
-      "spades      int32\n",
-      "clubs       int32\n",
-      "dtype: object\n"
+      " ♠  ♦  ♥  ♣\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>hearts</th>\n",
-       "      <th>diamonds</th>\n",
-       "      <th>spades</th>\n",
-       "      <th>clubs</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Ace</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>8</td>\n",
-       "      <td>9</td>\n",
-       "      <td>10</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>12</td>\n",
-       "      <td>13</td>\n",
-       "      <td>14</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>16</td>\n",
-       "      <td>17</td>\n",
-       "      <td>18</td>\n",
-       "      <td>19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>20</td>\n",
-       "      <td>21</td>\n",
-       "      <td>22</td>\n",
-       "      <td>23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>24</td>\n",
-       "      <td>25</td>\n",
-       "      <td>26</td>\n",
-       "      <td>27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>28</td>\n",
-       "      <td>29</td>\n",
-       "      <td>30</td>\n",
-       "      <td>31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>32</td>\n",
-       "      <td>33</td>\n",
-       "      <td>34</td>\n",
-       "      <td>35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>36</td>\n",
-       "      <td>37</td>\n",
-       "      <td>38</td>\n",
-       "      <td>39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Jack</th>\n",
-       "      <td>40</td>\n",
-       "      <td>41</td>\n",
-       "      <td>42</td>\n",
-       "      <td>43</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Queen</th>\n",
-       "      <td>44</td>\n",
-       "      <td>45</td>\n",
-       "      <td>46</td>\n",
-       "      <td>47</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>King</th>\n",
-       "      <td>48</td>\n",
-       "      <td>49</td>\n",
-       "      <td>50</td>\n",
-       "      <td>51</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Joker</th>\n",
-       "      <td>52</td>\n",
-       "      <td>53</td>\n",
-       "      <td>52</td>\n",
-       "      <td>53</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       hearts  diamonds  spades  clubs\n",
-       "Ace         0         1       2      3\n",
-       "2           4         5       6      7\n",
-       "3           8         9      10     11\n",
-       "4          12        13      14     15\n",
-       "5          16        17      18     19\n",
-       "6          20        21      22     23\n",
-       "7          24        25      26     27\n",
-       "8          28        29      30     31\n",
-       "9          32        33      34     35\n",
-       "10         36        37      38     39\n",
-       "Jack       40        41      42     43\n",
-       "Queen      44        45      46     47\n",
-       "King       48        49      50     51\n",
-       "Joker      52        53      52     53"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#remove 2 extra jokers by making them same as 2 others\n",
-    "#it's allow to use any random numbers to code cards if needed\n",
-    "deck['spades']['Joker']=deck['hearts']['Joker']\n",
-    "deck['clubs']['Joker']=deck['diamonds']['Joker']\n",
-    "# if use \n",
-    "# deck['spades']['Joker'] = np.NaN\n",
-    "# deck['clubs']['Joker'] = np.NaN\n",
-    "#data types will be miexed for diffirent columns\n",
-    "print(deck.dtypes) #but now they will be same\n",
-    "#lets look result\n",
-    "deck"
+    "print (\" \\u2660  \\u2666  \\u2665  \\u2663\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
-   "source": [
-    "deck.loc?\n",
-    "# filename = 'Ace_spades.png'\n",
-    "# ironman = Image.open(filename, 'r')\n",
-    "# ironman"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -429,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
