--- a/folium/folium_test.ipynb
+++ b/folium/folium_test.ipynb
@@ -237,7 +237,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x26d13bdc470>"
+       "<IPython.lib.display.IFrame at 0x252b2ca7608>"
       ]
      },
      "execution_count": 7,
@@ -274,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
