--- a/Blackjack.ipynb
+++ b/Blackjack.ipynb
@@ -125,10 +125,10 @@
    "outputs": [],
    "source": [
     "def f_result(crds):\n",
-    "    print(crds)\n",
+    "    #print(crds)\n",
     "    vals = np.array(f_cards_values(crds))\n",
-    "    print(vals)\n",
-    "    print()\n",
+    "    #print(vals)\n",
+    "    #print()\n",
     "    summ = 0.0\n",
     "    res = 'continue'\n",
     "    \n",
@@ -179,75 +179,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cards_names = f_card_names()\n",
-    "#cards_names"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([44, 33, 25, 53,  2, 41, 39, 18, 11, 12, 51, 50, 30, 21, 15, 27, 10,\n",
-       "       29, 13, 20, 49, 19, 17,  1, 24, 32,  9,  5, 34, 22, 31,  3, 43, 37,\n",
-       "       28, 40, 16, 45, 48, 26,  7, 14, 42,  6, 36, 46, 23, 35,  8, 38, 52,\n",
-       "        4, 47])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "deck, discard_pile = f_new_deck(1)\n",
-    "deck"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "player\n",
-      "       color      suit card\n",
-      "index                      \n",
-      "45     black    hearts    6\n",
-      "34     black  diamonds    8\n",
-      "[44 33]\n",
-      "[6. 8.]\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(14.0, 'continue')"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "deck, player, croupier = f_hand_over_cards(deck)\n",
-    "print('player')\n",
-    "print(cards_names.iloc[player])\n",
-    "f_result(player)"
+    "def f_check(p, c):\n",
+    "    p = f_result(p)\n",
+    "    c = f_result(c)\n",
+    "    print('Player\\' hand')\n",
+    "    print(p)\n",
+    "    print('Crupie\\' hand')\n",
+    "    print(c)\n",
+    "    if p[1] is 'win':\n",
+    "        \n",
+    "        print('Player win!')\n",
+    "        return 0.\n",
+    "    \n",
+    "    if p[1] is 'lose':\n",
+    "        \n",
+    "        print('Casino win!')\n",
+    "        return 0.5\n",
+    "    \n",
+    "    print('Сroupier\\'s turn!')\n",
+    "    return 1.\n",
+    "    "
    ]
   },
   {
@@ -259,39 +221,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cards_names = f_card_names()\n",
+    "#cards_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       color      suit card\n",
-      "index                      \n",
-      "45     black    hearts    6\n",
-      "34     black  diamonds    8\n",
-      "3        red  diamonds    3\n",
-      "[44 33  2]\n",
-      "[6. 8. 3.]\n",
-      "\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "(17.0, 'continue')"
+       "array([30, 43, 31,  5, 46, 27, 13, 50, 28, 18, 15, 34, 26,  6, 37, 25,  3,\n",
+       "        7,  1, 45, 10,  9,  4, 32, 14, 42, 41, 12, 20, 29, 11, 51,  8,  2,\n",
+       "       16, 23, 38, 49, 40, 21, 47, 52, 22, 48, 53, 19, 44, 35, 39, 36, 24,\n",
+       "       17, 33])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "deck, player = f_more_card(deck, player)\n",
-    "print(cards_names.iloc[player])\n",
-    "f_result(player)"
+    "deck, discard_pile = f_new_deck(1)\n",
+    "deck"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PLAYER\n",
+      "       color      suit card\n",
+      "index                      \n",
+      "31     black  diamonds    5\n",
+      "44     black    hearts    5\n",
+      "(10.0, 'continue')\n",
+      "\n",
+      "CROUPIE\n",
+      "       color      suit card\n",
+      "index                      \n",
+      "32     black  diamonds    6\n",
+      "6        red  diamonds    6\n",
+      "(12.0, 'continue')\n"
+     ]
+    }
+   ],
+   "source": [
+    "deck, player, croupier = f_hand_over_cards(deck)\n",
+    "print('PLAYER')\n",
+    "print(cards_names.iloc[player])\n",
+    "print(f_result(player))\n",
+    "print()\n",
+    "print('CROUPIE')\n",
+    "print(cards_names.iloc[croupier])\n",
+    "print(f_result(croupier))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -302,67 +307,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "croupier\n",
-      "       color    suit   card\n",
+      "       color      suit card\n",
       "index                      \n",
-      "26       red  hearts   King\n",
-      "54     black    None  Joker\n",
-      "[25 53]\n",
-      "[10. 12.]\n",
-      "\n"
+      "31     black  diamonds    5\n",
+      "44     black    hearts    5\n",
+      "47     black    hearts    8\n",
+      "(18.0, 'continue')\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(21.0, 'win')"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print('croupier')\n",
-    "print(cards_names.iloc[croupier])\n",
-    "f_result(croupier)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       color    suit   card\n",
-      "index                      \n",
-      "26       red  hearts   King\n",
-      "54     black    None  Joker\n",
-      "42     black  hearts      3\n",
-      "[25 53 41]\n",
-      "[10. 12.  3.]\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(21.0, 'win')"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "deck, croupier = f_more_card(deck, croupier)\n",
-    "print(cards_names.iloc[croupier])\n",
-    "f_result(croupier)"
+    "deck, player = f_more_card(deck, player)\n",
+    "print(cards_names.iloc[player])\n",
+    "print(f_result(player))"
    ]
   },
   {
@@ -370,9 +327,114 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       color      suit card\n",
+      "index                      \n",
+      "32     black  diamonds    6\n",
+      "6        red  diamonds    6\n",
+      "(12.0, 'continue')\n"
+     ]
+    }
+   ],
    "source": [
-    "def f_check(p, c):\n",
+    "deck, croupie = f_more_card(deck, croupier)\n",
+    "print(cards_names.iloc[croupier])\n",
+    "print(f_result(croupier))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Player' hand\n",
+      "(18.0, 'continue')\n",
+      "Crupie' hand\n",
+      "(12.0, 'continue')\n",
+      "Сroupier's turn!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f_check(player, croupier)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "def f_croupie(p, c):\n",
+    "    result = f_check(p, c)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y/n?\n",
+      "т\n",
+      "y/n?\n",
+      "y\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    print('y/n?')\n",
+    "    if input() != 'y':\n",
+    "        continue\n",
+    "    else:\n",
+    "        break"
    ]
   }
  ],
