--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,24 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import plotly as py\n",
-    "import plotly.graph_objects as go"
+    "import xlrd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Empty DataFrame\n",
+       " Columns: []\n",
+       " Index: [], Empty DataFrame\n",
+       " Columns: []\n",
+       " Index: []]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "all = 9491800\n",
-    "country = 7412100"
+    "a = pd.DataFrame()\n",
+    "b = pd.DataFrame()\n",
+    "c = [a,b]\n",
+    "c"
    ]
   }
  ],
@@ -39,7 +55,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
