html telegram parser updated

--- a/telegram parsing with soup_find.ipynb
+++ b/telegram parsing with soup_find.ipynb
@@ -2,12 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "import random\n",
     "import numpy as np\n",
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd"
@@ -15,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -23,14 +22,13 @@
    "source": [
     "#open file with history\n",
     "path = 'msg/messages.html'\n",
-    "file = open(path, encoding='utf8')\n",
-    "data = file.read()\n",
-    "file.close()"
+    "with open(path, encoding='utf8') as file:\n",
+    "    data = file.read()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -59,10 +57,10 @@
     {
      "data": {
       "text/plain": [
-       "46"
+       "998"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -116,103 +114,105 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2019-01-05 16:21:49</th>\n",
+       "      <th>2016-04-07 12:15:06</th>\n",
        "      <td>message</td>\n",
-       "      <td>iSANS Беларусь</td>\n",
-       "      <td>Комментарий эксперта iSANS про принятую концеп...</td>\n",
+       "      <td>Чай з малинавым варэннем</td>\n",
+       "      <td>В Минске праздничный потопЧитать</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2019-01-05 16:24:13</th>\n",
+       "      <th>2016-04-07 12:15:07</th>\n",
        "      <td>message</td>\n",
-       "      <td>iSANS Беларусь</td>\n",
-       "      <td>Выдержки из доклада iSANS:«В последние месяцы ...</td>\n",
+       "      <td>Чай з малинавым варэннем</td>\n",
+       "      <td>10 фото</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2019-01-05 16:26:06</th>\n",
+       "      <th>2016-04-07 12:38:06</th>\n",
        "      <td>message</td>\n",
-       "      <td>iSANS Беларусь</td>\n",
-       "      <td>КАРДИНАЛЬНЫЕ ПЕРЕМЕНЫ В АНТИБЕЛОРУССКОЙ ДЕЗИН...</td>\n",
+       "      <td>Чай з малинавым варэннем</td>\n",
+       "      <td>Мы тут канал в Telegram завели, го:https://tel...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2019-01-05 16:26:14</th>\n",
+       "      <th>2016-04-07 12:38:07</th>\n",
        "      <td>message</td>\n",
-       "      <td>iSANS Беларусь</td>\n",
-       "      <td>https://reform.by/kolichestvo-saytov-s-antibel...</td>\n",
+       "      <td>Чай з малинавым варэннем</td>\n",
+       "      <td>_empty_text_</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2019-01-05 16:27:59</th>\n",
+       "      <th>2016-04-07 13:27:06</th>\n",
        "      <td>message</td>\n",
-       "      <td>iSANS Беларусь</td>\n",
-       "      <td>«Цели: Развитие единого информационного простр...</td>\n",
+       "      <td>Чай з малинавым варэннем</td>\n",
+       "      <td>История про то, как у главного дорожника Минск...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2019-01-05 16:28:41</th>\n",
+       "      <th>2016-04-07 13:27:07</th>\n",
        "      <td>message</td>\n",
-       "      <td>iSANS Беларусь</td>\n",
-       "      <td>Дэвид Марплз — профессор истории Университета ...</td>\n",
+       "      <td>Чай з малинавым варэннем</td>\n",
+       "      <td>_empty_text_</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2019-01-05 16:29:33</th>\n",
+       "      <th>2016-04-07 14:35:05</th>\n",
        "      <td>message</td>\n",
-       "      <td>iSANS Беларусь</td>\n",
-       "      <td>«… Очевидно, московское наступление на беларус...</td>\n",
+       "      <td>Чай з малинавым варэннем</td>\n",
+       "      <td>В Орше вор украл велосипед, перекрасил его и п...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2019-01-05 18:51:10</th>\n",
+       "      <th>2016-04-07 20:02:08</th>\n",
        "      <td>message</td>\n",
-       "      <td>iSANS Беларусь</td>\n",
-       "      <td>Что означает для Беларуси назначение послом Дм...</td>\n",
+       "      <td>Чай з малинавым варэннем</td>\n",
+       "      <td>_empty_text_</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2019-01-05 18:51:10</th>\n",
+       "      <th>2016-05-07 10:31:06</th>\n",
        "      <td>message</td>\n",
-       "      <td>iSANS Беларусь</td>\n",
-       "      <td>В свою бытность губернатором Иркутской области...</td>\n",
+       "      <td>Чай з малинавым варэннем</td>\n",
+       "      <td>В Гродно столкнулись две милицейские машиныhtt...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2019-01-05 23:22:00</th>\n",
+       "      <th>2016-05-07 10:31:06</th>\n",
        "      <td>message</td>\n",
-       "      <td>iSANS Беларусь</td>\n",
-       "      <td>https://reform.by/grigorij-mesezhnikov-rossija...</td>\n",
+       "      <td>Чай з малинавым варэннем</td>\n",
+       "      <td>4 фото</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        type           autor  \\\n",
-       "date                                           \n",
-       "2019-01-05 16:21:49  message  iSANS Беларусь   \n",
-       "2019-01-05 16:24:13  message  iSANS Беларусь   \n",
-       "2019-01-05 16:26:06  message  iSANS Беларусь   \n",
-       "2019-01-05 16:26:14  message  iSANS Беларусь   \n",
-       "2019-01-05 16:27:59  message  iSANS Беларусь   \n",
-       "2019-01-05 16:28:41  message  iSANS Беларусь   \n",
-       "2019-01-05 16:29:33  message  iSANS Беларусь   \n",
-       "2019-01-05 18:51:10  message  iSANS Беларусь   \n",
-       "2019-01-05 18:51:10  message  iSANS Беларусь   \n",
-       "2019-01-05 23:22:00  message  iSANS Беларусь   \n",
+       "                        type                     autor  \\\n",
+       "date                                                     \n",
+       "2016-04-07 12:15:06  message  Чай з малинавым варэннем   \n",
+       "2016-04-07 12:15:07  message  Чай з малинавым варэннем   \n",
+       "2016-04-07 12:38:06  message  Чай з малинавым варэннем   \n",
+       "2016-04-07 12:38:07  message  Чай з малинавым варэннем   \n",
+       "2016-04-07 13:27:06  message  Чай з малинавым варэннем   \n",
+       "2016-04-07 13:27:07  message  Чай з малинавым варэннем   \n",
+       "2016-04-07 14:35:05  message  Чай з малинавым варэннем   \n",
+       "2016-04-07 20:02:08  message  Чай з малинавым варэннем   \n",
+       "2016-05-07 10:31:06  message  Чай з малинавым варэннем   \n",
+       "2016-05-07 10:31:06  message  Чай з малинавым варэннем   \n",
        "\n",
        "                                                                  text  \n",
        "date                                                                    \n",
-       "2019-01-05 16:21:49  Комментарий эксперта iSANS про принятую концеп...  \n",
-       "2019-01-05 16:24:13  Выдержки из доклада iSANS:«В последние месяцы ...  \n",
-       "2019-01-05 16:26:06  КАРДИНАЛЬНЫЕ ПЕРЕМЕНЫ В АНТИБЕЛОРУССКОЙ ДЕЗИН...  \n",
-       "2019-01-05 16:26:14  https://reform.by/kolichestvo-saytov-s-antibel...  \n",
-       "2019-01-05 16:27:59  «Цели: Развитие единого информационного простр...  \n",
-       "2019-01-05 16:28:41  Дэвид Марплз — профессор истории Университета ...  \n",
-       "2019-01-05 16:29:33  «… Очевидно, московское наступление на беларус...  \n",
-       "2019-01-05 18:51:10  Что означает для Беларуси назначение послом Дм...  \n",
-       "2019-01-05 18:51:10  В свою бытность губернатором Иркутской области...  \n",
-       "2019-01-05 23:22:00  https://reform.by/grigorij-mesezhnikov-rossija...  "
+       "2016-04-07 12:15:06                   В Минске праздничный потопЧитать  \n",
+       "2016-04-07 12:15:07                                            10 фото  \n",
+       "2016-04-07 12:38:06  Мы тут канал в Telegram завели, го:https://tel...  \n",
+       "2016-04-07 12:38:07                                       _empty_text_  \n",
+       "2016-04-07 13:27:06  История про то, как у главного дорожника Минск...  \n",
+       "2016-04-07 13:27:07                                       _empty_text_  \n",
+       "2016-04-07 14:35:05  В Орше вор украл велосипед, перекрасил его и п...  \n",
+       "2016-04-07 20:02:08                                       _empty_text_  \n",
+       "2016-05-07 10:31:06  В Гродно столкнулись две милицейские машиныhtt...  \n",
+       "2016-05-07 10:31:06                                             4 фото  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "EMPTY_TEXT = '_empty_text_'\n",
+    "\n",
     "#creating DataFrame with messages\n",
     "records = [] # temp operand \n",
     "\n",
@@ -269,23 +269,23 @@
     "df['date'] = pd.to_datetime(df['date'])\n",
     "df.set_index('date', inplace=True)\n",
     "#df.sort_index(inplace=True) # not recomended, forwarded messages might be older then previous \n",
-    "df['text'].fillna('_empty_text_', inplace=True) #some messageses may not has text, so fill them with well known constant\n",
+    "df['text'].fillna(EMPTY_TEXT, inplace=True) #some messageses may not has text, so fill them with well known constant\n",
     "#show first 10 \n",
     "df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Выдержки из доклада iSANS:«В последние месяцы это наступление приобрело характер «гибридной войны». Государственные, квази-частные и неправительственные инициативы образуют широкую систему влияния, направленную на так называемую «глубокую интеграцию» Беларуси с Россией, а по сути – на принуждение к отказу от независимости и суверенитета. Именно такой, а не силовой сценарий поглощения Беларуси Россией представляется наиболее вероятным…Пророссийское воздействие ведется целенаправленно и скоординировано, координируется Администрацией президента России, финансируется из государственных и частных источников и осуществляется через российских и беларусских акторов, объединенных в несколько сетей. Массированная пропагандистская работа в СМИ и интернете сочетается с деятельностью разнообразных экспертных, дискуссионных и молодежных объединений и парамилитарных групп. Организаторами и исполнителями антибеларусских действий являются в основном политики и активисты, исповедующие и распространяющие имперскую, русско-националистическую, резко консервативную, крайне правую и антизападную идеологию. Многие из них активно участвовали в подготовке и реализации агрессии в Украине и прошлых конфликтах с участием России».Больше: https://reform.by/isans-dlya-russia-pogloshcheniye-b'"
+       "'10 фото'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
